# copy-glob

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test.rs
tests/for_copy/: rara.rs
tests/for_copy/not_empty/: holo.yml
